Improve FormatBuilder